objects/PC_Service__c.object
<CustomObject>
    <description>Object to hold different consent categories (each of which can consist of different consent options), so that consent can be captured at a more granular level.</description>
    <fields>
        <fullName>PC_CareTeamPermissionRequiredRoles__c</fullName>
        <label>Care Team Permission Required Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HCO</fullName>
                </value>
                <value>
                    <fullName>Treating Physician</fullName>
                </value>
                <value>
                    <fullName>Care Coordinator</fullName>
                </value>
                <value>
                    <fullName>Reimbursement Specialist</fullName>
                </value>
                <value>
                    <fullName>Field Reimbursement Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Category__c</fullName>
        <description>The category of the service (for example, Communication Channel, Data Sharing).</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Communication Channel</fullName>
                </value>
                <value>
                    <fullName>Portal / Mobile Usage</fullName>
                </value>
                <value>
                    <fullName>Data Sharing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Default_Expiration_Days__c</fullName>
        <description>The number of days after which the service expires.</description>
        <label>Default Expiration Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_HCP_Permission_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures if the HCP permission is required for the service.</description>
        <label>HCP Permission Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Patient_Permission_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checkbox to capture if the patient&apos;s permission is required for the service.</description>
        <label>Patient Permission Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Service_Communication_Channel__c</fullName>
        <description>Communication channel used for the service.</description>
        <label>Service Communication Channel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Service_Function__c</fullName>
        <description>Category of service. For example, Referral Notification etc.</description>
        <label>Service Function</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Referral Notification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Positive_Expiration_Days</fullName>
        <active>true</active>
        <description>Does not allow users to enter negative value</description>
        <errorConditionFormula>IF( PC_Default_Expiration_Days__c &lt; 0 , true, false)</errorConditionFormula>
        <errorDisplayField>PC_Default_Expiration_Days__c</errorDisplayField>
        <errorMessage>Default Expiration Days can not be negative</errorMessage>
    </validationRules>
</CustomObject>